# evalkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: geography_quiz.json  rag_eval.json
src/evalkit/: __init__.py  adapters.py  cli.py  models.py  suite.py
src/evalkit/datasets/: __init__.py  loader.py
src/evalkit/metrics/: __init__.py  base.py  deterministic.py  judge_prompts.py  llm_judge.py  statistical.py
src/evalkit/reporters/: __init__.py  console.py  html_reporter.py  json_reporter.py
src/evalkit/runners/: __init__.py  runner.py
tests/integration/: test_e2e.py
tests/unit/: test_adapters.py  test_cli.py  test_datasets.py  test_html_reporter.py  test_llm_judge.py  test_metrics.py  test_models.py  test_reporters.py  test_runner.py  test_statistical.py  test_suite.py
